Segunda parte de la tarea
se agrega el salario anual por integrante y se calcula mayor, menor y promedios

--- a/tarea-clase-6-edades.html
+++ b/tarea-clase-6-edades.html
@@ -15,20 +15,11 @@
       <form id="formulario">
         <label>Ingresar el numero del grupo familiar</label>
         <input type="number" id="grupoFamiliar" />
-        <input
-          type="button"
-          value="Enviar información"
-          id="botonEnviar"
-        /><br />
+        <input type="button" value="Enviar información" id="botonEnviar"/><br />
 
         <div id="edadIntegrantes"></div>
 
-        <input
-          type="button"
-          value="calcular"
-          id="botonCalcular"
-          style="display: none"
-        />
+        <input type="button" value="calcular" id="botonCalcular" style="display: none"/>
         <input type="reset" value="borrar" id="botonBorrar" /><br />
         <!--<input type="submit" value="Limpiar">-->
       </form>
@@ -47,6 +38,6 @@
       <hr />
       <span>tarea clase 6</span>
     </footer>
-    <script src="tarea-clase-6.js"></script>
+    <script src="tarea-clase-6-edades.js"></script>
   </body>
 </html>
