--- a/tarea-clase-6-edades.html
+++ b/tarea-clase-6-edades.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tarea Clase 6</title>
+    <title>Tarea Clase 6 edades</title>
   </head>
   <body>
     <header>
@@ -21,7 +21,6 @@
 
         <input type="button" value="calcular" id="botonCalcular" style="display: none"/>
         <input type="reset" value="borrar" id="botonBorrar" /><br />
-        <!--<input type="submit" value="Limpiar">-->
       </form>
       <p id="advertencia" style="display: none;">Debe ingresar un número mayor a cero</p>
       <div id="resultados" style="display: none">
